--- a/index.html
+++ b/index.html
@@ -7,21 +7,17 @@
     <meta name="description" content="Jiffy is a fun way to discover giffs!">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-
     <meta property="og:title" content="Jiffy">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://">
     <meta property="og:image" content="https://editor.superhi.com/assets/images/social.png">
     <meta property="og:description" content="Jiffy is a fun way to discover giffs!">
 
-
     <meta name="superhi/config/environment" content="%7B%22modulePrefix%22%3A%22superhi%22%2C%22environment%22%3A%22production%22%2C%22rootURL%22%3A%22/%22%2C%22locationType%22%3A%22auto%22%2C%22EmberENV%22%3A%7B%22FEATURES%22%3A%7B%7D%2C%22EXTEND_PROTOTYPES%22%3A%7B%22Date%22%3Afalse%7D%7D%2C%22contentSecurityPolicy%22%3A%7B%22default-src%22%3A%22%27none%27%22%2C%22script-src%22%3A%22%27self%27%20%27unsafe-inline%27%20%27unsafe-eval%27%20use.typekit.net%20connect.facebook.net%20maps.googleapis.com%20maps.gstatic.com%20d1l6p2sc9645hc.cloudfront.net%20widget.intercom.io%20js.intercomcdn.com%20api.superhi.com%22%2C%22font-src%22%3A%22%27self%27%20data%3A%20use.typekit.net%20assets.superhi.com%22%2C%22connect-src%22%3A%22%27self%27%20localhost%3A4000%20*.superhi.com%20api.superhi.com%20https%3A//api-iam.intercom.io%20https%3A//api-ping.intercom.io%20https%3A//nexus-websocket-a.intercom.io%20https%3A//nexus-websocket-b.intercom.io%20wss%3A//nexus-websocket-a.intercom.io%20wss%3A//nexus-websocket-b.intercom.io%22%2C%22img-src%22%3A%22%5C%22self%5C%22%20www.facebook.com%20p.typekit.net%20data%3A%20http%3A//localhost%3A4200%20https%3A//static.intercomcdn.com%20https%3A//js.intercomcdn.com%22%2C%22media-src%22%3A%22https%3A//js.intercomcdn.com%20api.superhi.com%22%2C%22style-src%22%3A%22%27self%27%20%27unsafe-inline%27%20use.typekit.net%20fonts.google.com%20api.superhi.com%22%2C%22frame-src%22%3A%22s-static.ak.facebook.com%20static.ak.facebook.com%20www.facebook.com%20*.hosting.dev%20*.superhi.com%20*.superhi.site%20*.0.0.0.0.nip.io%3A4000%20%27self%27%20api.superhi.com%22%7D%2C%22APP%22%3A%7B%22name%22%3A%22superhi%22%2C%22version%22%3A%221.5.0%22%7D%2C%22host_domain%22%3A%22superhi.com%22%2C%22api_domain%22%3A%22https%3A//api.superhi.com%22%2C%22ws_domain%22%3A%22wss%3A//api.superhi.com%22%2C%22prettify_domain%22%3A%22https%3A//superhi-prettify.herokuapp.com%22%2C%22intercom%22%3A%7B%22appId%22%3A%22rllkcuob%22%7D%2C%22exportApplicationGlobal%22%3Afalse%7D">
 
-    <link rel="stylesheet" href="/assets/vendor-6f5a01aa094c269c3cd82e02a4d00bb1.css" integrity="sha256-82WvPwvHa9Ql9Q3Q5AytHix2AyFAr7igI+64cu/ROao= sha512-1Bz3NC1KmB5YXRJgQdVbpojuNZB6JpiVBBJeZvtMj8MrJmhSg4IT0DHTILyFqaw7x9rATBcpuy8tUCqtwuoQ/g==">
-    <link rel="stylesheet" href="/assets/superhi-26bfb95294a0aa2e54d1ee4b433c6c6d.css" integrity="sha256-4kRl6i/IVWhqA7OgJOq0PP0zUCrGYqnpq2BhuzyEB3w= sha512-BIlMXxk1iuzdQxqKKoRZdCPbHr0YlGxllcZqLO2nmPIlDJcwDks+z+jy/L3u+OWS6+/Sr5WXL37vcKgEs0mNKg==">
+    <link rel="stylesheet" href="/stylesheets/base.css" type="text/css">
+    <link rel="stylesheet" href="/stylesheets/style.css" type="text/css">
     <link rel="shortcut icon" href="/favicon.ico">
-
-
   </head>
 
   <body>
