--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Jiffy - SuperHi</title>
+    <title>Jiffy</title>
     <meta name="description" content="Jiffy is a fun way to discover giffs!">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
@@ -15,8 +15,8 @@
 
     <meta name="superhi/config/environment" content="%7B%22modulePrefix%22%3A%22superhi%22%2C%22environment%22%3A%22production%22%2C%22rootURL%22%3A%22/%22%2C%22locationType%22%3A%22auto%22%2C%22EmberENV%22%3A%7B%22FEATURES%22%3A%7B%7D%2C%22EXTEND_PROTOTYPES%22%3A%7B%22Date%22%3Afalse%7D%7D%2C%22contentSecurityPolicy%22%3A%7B%22default-src%22%3A%22%27none%27%22%2C%22script-src%22%3A%22%27self%27%20%27unsafe-inline%27%20%27unsafe-eval%27%20use.typekit.net%20connect.facebook.net%20maps.googleapis.com%20maps.gstatic.com%20d1l6p2sc9645hc.cloudfront.net%20widget.intercom.io%20js.intercomcdn.com%20api.superhi.com%22%2C%22font-src%22%3A%22%27self%27%20data%3A%20use.typekit.net%20assets.superhi.com%22%2C%22connect-src%22%3A%22%27self%27%20localhost%3A4000%20*.superhi.com%20api.superhi.com%20https%3A//api-iam.intercom.io%20https%3A//api-ping.intercom.io%20https%3A//nexus-websocket-a.intercom.io%20https%3A//nexus-websocket-b.intercom.io%20wss%3A//nexus-websocket-a.intercom.io%20wss%3A//nexus-websocket-b.intercom.io%22%2C%22img-src%22%3A%22%5C%22self%5C%22%20www.facebook.com%20p.typekit.net%20data%3A%20http%3A//localhost%3A4200%20https%3A//static.intercomcdn.com%20https%3A//js.intercomcdn.com%22%2C%22media-src%22%3A%22https%3A//js.intercomcdn.com%20api.superhi.com%22%2C%22style-src%22%3A%22%27self%27%20%27unsafe-inline%27%20use.typekit.net%20fonts.google.com%20api.superhi.com%22%2C%22frame-src%22%3A%22s-static.ak.facebook.com%20static.ak.facebook.com%20www.facebook.com%20*.hosting.dev%20*.superhi.com%20*.superhi.site%20*.0.0.0.0.nip.io%3A4000%20%27self%27%20api.superhi.com%22%7D%2C%22APP%22%3A%7B%22name%22%3A%22superhi%22%2C%22version%22%3A%221.5.0%22%7D%2C%22host_domain%22%3A%22superhi.com%22%2C%22api_domain%22%3A%22https%3A//api.superhi.com%22%2C%22ws_domain%22%3A%22wss%3A//api.superhi.com%22%2C%22prettify_domain%22%3A%22https%3A//superhi-prettify.herokuapp.com%22%2C%22intercom%22%3A%7B%22appId%22%3A%22rllkcuob%22%7D%2C%22exportApplicationGlobal%22%3Afalse%7D">
 
-    <link rel="stylesheet" href="/stylesheets/base.css" type="text/css">
-    <link rel="stylesheet" href="/stylesheets/style.css" type="text/css">
+    <link rel="stylesheet" href="stylesheets/base.css" type="text/css">
+    <link rel="stylesheet" href="stylesheets/style.css" type="text/css">
     <link rel="shortcut icon" href="/favicon.ico">
   </head>
 
@@ -24,7 +24,7 @@
     <div class="top">
       <h1 class="title">Jiffy</h1>
       <a class="search-clear">
-        <img src="close.svg">
+        <img src="assets/close.svg">
       </a>
     </div>
 
@@ -34,7 +34,7 @@
     </div>
 
     <div class="indicators">
-      <img class="spinner" src="oval.svg">
+      <img class="spinner" src="assets/oval.svg">
       <span class="search-hint">Hit enter to search</span>
     </div>
   </body>
