--- a/index.html
+++ b/index.html
@@ -21,21 +21,23 @@
   </head>
 
   <body>
-    <div class="top">
-      <h1 class="title">Jiffy</h1>
-      <a class="search-clear">
+    <div class="top grid">
+      <h1 class="title full-area">Jiffy</h1>
+      <a class="search-clear full-area">
         <img src="assets/close.svg">
       </a>
     </div>
 
     <div class="middle">
       <input class="search-input" placeholder="Type something">
-      <div class="videos"></div>
+      <div class="videos">
+        <video class="video" src="https://media2.giphy.com/media/39xDerRCIoX2WeUVBz/giphy.mp4?cid=4b93ed6f9ebcbfa5b7f8116a653f5dc3ce252de265c9bc39&amp;rid=giphy.mp4" autoplay="" loop=""></video>
+      </div>
     </div>
 
-    <div class="indicators">
-      <img class="spinner" src="assets/oval.svg">
-      <span class="search-hint">Hit enter to search</span>
+    <div class="indicators grid">
+      <img class="spinner full-area" src="assets/oval.svg">
+      <span class="search-hint full-area">Hit enter to search</span>
     </div>
     <script src="jiffy.js"></script>
   </body>
