added keyup event listener for input

--- a/index.html
+++ b/index.html
@@ -28,10 +28,9 @@
       </a>
     </div>
 
-    <div class="middle">
-      <input class="search-input" placeholder="Type something">
-      <div class="videos">
-        <video class="video" src="https://media2.giphy.com/media/39xDerRCIoX2WeUVBz/giphy.mp4?cid=4b93ed6f9ebcbfa5b7f8116a653f5dc3ce252de265c9bc39&amp;rid=giphy.mp4" autoplay="" loop=""></video>
+    <div class="middle grid">
+      <input class="search-input full-area" placeholder="Type something">
+      <div class="videos grid full-area">
       </div>
     </div>
 
