--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <link rel="stylesheet" href="stylesheets/base.css" type="text/css">
     <link rel="stylesheet" href="stylesheets/style.css" type="text/css">
-    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="shortcut icon" href="assets/favicon.png">
   </head>
 
   <body>
