added rotation to gifs

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
     <link rel="stylesheet" href="stylesheets/base.css" type="text/css">
     <link rel="stylesheet" href="stylesheets/style.css" type="text/css">
+    <link rel="stylesheet" href="stylesheets/transitions.css" type="text/css">
     <link rel="shortcut icon" href="assets/favicon.png">
   </head>
 
